# thetis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
doc/: api.md
peleus/: Pipfile  entry.py  run_devel.sh  test_thetis.py  thetis.py
peleus/app/: __init__.py  login.py  thetisapi.py  user.py  util.py
peleus/static/css/: custom.css
peleus/templates/: base.html  home.html  login.html  user.html
rust-client/: Cargo.toml
rust-common/: Cargo.toml
rust-common/src/: auth.rs  diesel_impls.rs  errors.rs  lib.rs  mail.rs  newtypes.rs
server/: Cargo.toml  build.rs  capabilities.pl
server/src/: context.rs  errors.rs  handler_context.rs  lib.rs  macros.rs  main.rs  util.rs
server/src/api/: mod.rs
server/src/auth/: capabilities.rs  mod.rs
server/src/auth/capabilities/: ast.rs  cst.rs  eval.rs  grammar.lalrpop  mod.rs  tests.rs  unify.rs
server/src/capabilities/: mod.rs
server/src/db/: mod.rs  schema.rs
server/src/mail/: mod.rs
server/src/web/: middleware.rs  mod.rs
server/src/web/routes/: api.rs  mod.rs
