[package]
description = "Data structures shared between the client and server."
name = "thetis-common"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", default_features = false, optional = true }
serde = "1.0.77"
serde_derive = "1.0.77"
serde_json = "1.0.27"
