[package]
name = "thetis"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", default_features = false, features = ["mysql", "r2d2", "serde_json"] }
dotenv = "0.13.0"
failure = "0.1.2"
fern = { version = "0.5.6", features = ["syslog-4"] }
futures = "0.1.24"
hostname = "0.1.5"
lettre = "0.8.2"
lettre_email = "0.8.2"
log = "0.4.5"
pulldown-cmark = "0.1.2"
serde = "1.0.77"
serde_derive = "1.0.77"
serde_json = "1.0.27"
structopt = "0.2.10"
syslog = "4.0.1"
tera = "0.11.14"
thetis-common = { path = "../rust-common" }
tokio = "0.1.8"
tokio-threadpool = "0.1.6"
url = "1.7.1"
warp = "0.1.3"
