[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
name = "thetis"
version = "0.1.0"

[dependencies]
diesel = { version = "1.3.3", default_features = false, features = ["mysql", "r2d2", "serde_json"] }
dotenv = "0.13.0"
failure = "0.1.2"
fall = "0.1.2"
fern = { version = "0.5.6", features = ["syslog-4"] }
frunk = "0.2.0"
futures = "0.1.24"
hostname = "0.1.5"
jsonwebtoken = "5.0.1"
lazy_static = "1.1.0"
lettre = "0.8.2"
lettre_email = "0.8.2"
log = "0.4.5"
mime = "0.3.9"
pulldown-cmark = "0.1.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
structopt = "0.2.10"
syslog = "4.0.1"
tera = "0.11.16"
thetis-common = { path = "../rust-common", features = ["diesel"] }
tokio = "0.1.8"
tokio-threadpool = "0.1.6"
url = "1.7.1"
warp = "0.1.3"
